# MKVRebuilder

./: .gitignore  README.md  main.py  pyproject.toml  track_info.json
config/: config.ini
dev/ts/: ru_RU.ts
dev/ui/: main_window.ui  rebuilder_widget.ui  settings_widget.ui
src/console/: utils.py  widget.py  widget_ui.py
src/info/: repository.py  service.py
src/main/: utils.py  widget_ui.py  window.py
src/profiler/: service.py
src/rebuilder/: README.md  utils.py  widget.py  widget_ui.py
src/settings/: config.py  settings.py  thread_manager.py
static/eac3/: changelog.txt  log.txt  utils.py
static/localization/: ru_RU.qm
static/mkv_tools/: utils.py
static/style/: black_main.qss  black_rebuilder.qss
